Refine project configuration and dependencies (#53)
* Fix supporting files assignment to avoid skip all
* Improve debugging capabilities
* Upgrade Go version to 1.24 and update dependencies
* Fix build issues and pom file configuration
* Add Go version parsing support for gobrew and sdkman config
* Update Maven version and add coding task completion protocol to
AGENTS.md
* Add AI assistant configuration and documentation files
* Clean up dependencies